# musical_tracer

./: .coveragerc  Readme.rst  pyproject.toml  setup.cfg  test_simpletracer.py  test_simpletracer2.py
.github/: CONTRIBUTING.md
docs/: Makefile
docs/source/: conf.py  index.rst
musical_tracer/: __init__.py  music.py  tracer.py  writer.py
musical_tracer/writers/: simple.py
